# feup-aed-project-1

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Class.cpp  Class.h  ClassSchedule.cpp  ClassSchedule.h  ClassSession.cpp  ClassSession.h  Data.cpp  Data.h  Doxyfile  Makefile  README.md  Request.cpp  Request.h  Student.cpp  Student.h  TimeInterval.cpp  TimeInterval.h  Uc.cpp  Uc.h  UserInterface.cpp  UserInterface.h  main.cpp  scheduleclasses.csv  scheduleclasses_per_uc.csv
data/: classes.csv  request_history.csv
docs/html/: _app_8h_source.html  _class_8h_source.html  _class_schedule_8h_source.html  _class_session_8h_source.html  _data_8h_source.html  _request_8h_source.html  _student_8h_source.html  _time_interval_8h_source.html  _uc_8h_source.html  _user_interface_8h_source.html  annotated.html  class_app-members.html  class_app.html  class_app__coll__graph.map  class_app__coll__graph.md5  class_class-members.html  class_class.html  class_class_schedule-members.html  class_class_schedule.html  class_class_schedule__coll__graph.dot  class_class_session-members.html  class_class_session.html  class_class_session__coll__graph.map  class_class_session__coll__graph.md5  class_data-members.html  class_data.html  class_student-members.html  class_student.html  class_uc-members.html  class_uc.html  class_user_interface-members.html  class_user_interface.html  classes.html  dir_336854dae5666ef09d0639b541e90c18.html  dir_336854dae5666ef09d0639b541e90c18_dep.map  dir_336854dae5666ef09d0639b541e90c18_dep.md5  (+32 more)
schedule/: pendent_requests.csv  students_classes.csv
(+66 files in other folders)
